src/test/ui/in-band-lifetimes/no_in_band_in_struct.stderr
error[E0261]: use of undeclared lifetime name `'test`
  --> $DIR/no_in_band_in_struct.rs:5:9
   |
LL | struct Foo {
   |           - help: consider introducing lifetime `'test` here: `<'test>`
LL |     x: &'test u32,
   |         ^^^^^ undeclared lifetime

error[E0261]: use of undeclared lifetime name `'test`
  --> $DIR/no_in_band_in_struct.rs:9:10
   |
LL | enum Bar {
   |         - help: consider introducing lifetime `'test` here: `<'test>`
LL |     Baz(&'test u32),
   |          ^^^^^ undeclared lifetime

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0261`.
